--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,7 @@
-html {
-  box-sizing: border-box;
-}
+// html {
+//   box-sizing: border-box;
+// }
 
-*, *::after, *::before {
-  box-sizing: border-box;
-} 
+// *, *::after, *::before {
+//   box-sizing: border-box;
+// } 
