--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,7 @@
+@import "./layout/header";
+
 @import "./base/base";
 @import "./vendors/normalize";
+@import "./components/buttons";
+@import "./base/typography";
+@import "./abstracts/helpers"
