--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   padding: 20px;
   margin: 0 auto;
   outline: 1px dotted darkslategrey;
+  transition: 0.25s;
 }
 
 .header-content-wrap {
@@ -31,6 +32,12 @@
 .auth-mobile,
 .burger {
   display: none;
+}
+
+.burger.active::after,
+.burger.active::before,
+.burger.active span {
+  background-color: #fff;
 }
 
 .burger.active::after {
@@ -70,11 +77,25 @@
 }
 
 @media (max-width: 710px) {
+  .header.active {
+    background-color: #383838;
+    color: #fff;
+  }
   .header-content-wrap {
     justify-content: space-between;
   }
   .navigation {
     display: none;
+  }
+  .navigation.active {
+    display: block;
+  }
+  .navigation.active ul {
+    flex-direction: column;
+    margin: 37px 0 30px 0;
+  }
+  .navigation.active ul li {
+    margin-bottom: 20px;
   }
   .header .auth,
   .header button {
