--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,6 +4,7 @@
   padding: 20px;
   margin: 0 auto;
   outline: 1px dotted darkslategrey;
+  transition: 0.25s;
 }
 
 .header-content-wrap {
@@ -33,6 +34,11 @@
   display: none;
 }
 
+.burger.active::after,
+.burger.active::before,
+.burger.active span {
+  background-color: #fff;
+}
 .burger.active::after {
   transform: rotate(-45deg);
   bottom: 8px;
@@ -70,12 +76,29 @@
 }
 
 @media (max-width: 710px) {
+  .header.active {
+    background-color: #383838;
+    color: #fff;
+  }
+
   .header-content-wrap {
     justify-content: space-between;
   }
 
   .navigation {
     display: none;
+  }
+  .navigation.active {
+    display: block;
+    
+    ul {  
+      flex-direction: column;
+      margin: 37px 0 30px 0;
+
+      li {
+        margin-bottom: 20px;
+      }
+    }
   }
 
   .header {
