--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -28,10 +28,38 @@
   position: absolute;
   right: 20px;
 }
-
 .auth-mobile,
 .burger {
   display: none;
+}
+.auth-mobile {
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  width: 16px;
+  height: 17px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    border-radius: 50%;
+    border: 1px solid #68CBB3;
+    width: 14px;
+    height: 14px;
+    top: 9px
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    display: block;
+    border-radius: 50%;
+    border: 1px solid #68CBB3;
+    width: 6px;
+    height: 6px;
+    left: 4px;
+  }
 }
 
 .burger.active::after,
