--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,23 @@
 .header {
-  position: relative;
-  max-width: 1140px;
-  padding: 20px;
-  margin: 0 auto;
-  outline: 1px dotted darkslategrey;
-  transition: 0.25s;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
 }
 
-.header-content-wrap {
+.header-container {
+  position: relative;
+  width: 1140px;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+.header-container button {
+  padding-left: 2.2%;
+  padding-right: 2.2%;
+}
+
+.header-row {
   display: flex;
   align-items: center;
 }
@@ -22,6 +32,13 @@
   width: 100%;
 }
 
+.mobile-auth,
+.burger,
+.mobile-media,
+.mobile-buttons-wrap {
+  display: none;
+}
+
 .auth {
   font-size: 12px;
   text-transform: uppercase;
@@ -29,12 +46,7 @@
   right: 20px;
 }
 
-.auth-mobile,
-.burger {
-  display: none;
-}
-
-.auth-mobile {
+.mobile-auth {
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -42,46 +54,24 @@
   height: 17px;
 }
 
-.auth-mobile::before {
+.mobile-auth::before, .mobile-auth::after {
   content: '';
   position: absolute;
   display: block;
   border-radius: 50%;
   border: 1px solid #68CBB3;
+}
+
+.mobile-auth::before {
   width: 14px;
   height: 14px;
   top: 9px;
 }
 
-.auth-mobile::after {
-  content: '';
-  position: absolute;
-  display: block;
-  border-radius: 50%;
-  border: 1px solid #68CBB3;
+.mobile-auth::after {
   width: 6px;
   height: 6px;
   left: 4px;
-}
-
-.burger.active::after,
-.burger.active::before,
-.burger.active span {
-  background-color: #fff;
-}
-
-.burger.active::after {
-  transform: rotate(-45deg);
-  bottom: 8px;
-}
-
-.burger.active::before {
-  transform: rotate(45deg);
-  top: 9px;
-}
-
-.burger.active span {
-  transform: scale(0);
 }
 
 .navigation {
@@ -91,8 +81,6 @@
 
 .navigation ul {
   display: flex;
-  list-style-type: none;
-  padding: 0;
   margin: 40px 0 0 0;
 }
 
@@ -107,36 +95,22 @@
 }
 
 @media (max-width: 710px) {
-  .header.active {
-    background-color: #383838;
-    color: #fff;
-  }
-  .header-content-wrap {
+  .header-row {
     justify-content: space-between;
   }
   .navigation {
     display: none;
-  }
-  .navigation.active {
-    display: block;
-  }
-  .navigation.active ul {
-    flex-direction: column;
-    margin: 37px 0 30px 0;
-  }
-  .navigation.active ul li {
-    margin-bottom: 20px;
   }
   .header .auth,
   .header button {
     display: none;
   }
   .header .logo-link {
-    height: 31px;
+    height: 32px;
     width: 112px;
     margin: 0;
   }
-  .auth-mobile,
+  .mobile-auth,
   .burger {
     display: block;
   }
@@ -150,7 +124,7 @@
   .burger::after,
   .burger::before {
     content: '';
-    transition: 0.25s;
+    transition: 0.35s;
     position: absolute;
     background-color: #383838;
     width: 100%;
@@ -165,6 +139,100 @@
   .burger::before {
     top: 0;
   }
+}
+
+@media (max-width: 480px) {
+  .header-container {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
+
+.header.active {
+  background-color: #383838;
+  color: #ffffff;
+  height: 100vh;
+}
+
+.header.active .mobile-media {
+  display: flex;
+  margin-top: 30px;
+}
+
+.header.active .mobile-media li {
+  margin-right: 10px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ffffff;
+}
+
+.header.active .mobile-buttons-wrap {
+  display: flex;
+  flex-direction: column;
+}
+
+.header.active .mobile-buttons-wrap button {
+  text-align: center;
+  display: block;
+}
+
+.header.active .mobile-buttons-wrap button:first-child {
+  margin-bottom: 5px;
+}
+
+.header.active .mobile-buttons-wrap button:nth-child(2) {
+  color: #ffffff;
+}
+
+.header.active .mobile-buttons-wrap button:nth-child(2):hover {
+  color: #68CBB3;
+}
+
+.header.active .burger::after,
+.header.active .burger::before,
+.header.active .burger span {
+  background-color: #ffffff;
+}
+
+.header.active .burger::after {
+  transform: rotate(-45deg);
+  bottom: 8px;
+}
+
+.header.active .burger::before {
+  transform: rotate(45deg);
+  top: 9px;
+}
+
+.header.active .burger span {
+  transform: scale(0);
+}
+
+@media (max-width: 710px) {
+  .header.active .navigation {
+    display: block;
+  }
+  .header.active .navigation ul {
+    flex-direction: column;
+    margin: 37px 0 30px 0;
+  }
+  .header.active .navigation ul li {
+    margin-bottom: 20px;
+  }
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul li {
+  cursor: pointer;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -513,14 +581,13 @@ template {
   border: none;
   outline: none;
   border-radius: 6px;
-  padding-left: 2.2%;
-  padding-right: 2.2%;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
   letter-spacing: 0.05em;
   text-align: left;
+  transition: all 0.25s;
 }
 
 .transparent-btn {
@@ -530,11 +597,19 @@ template {
   padding-bottom: 12px;
 }
 
+.transparent-btn:hover {
+  color: #68CBB3;
+}
+
 .colored-btn {
   background-color: #68CBB3;
-  color: #fff;
+  color: #ffffff;
   padding-top: 13px;
   padding-bottom: 13px;
+}
+
+.colored-btn:hover {
+  background-color: #57B9A1;
 }
 
 body {
