--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,3 +1,5 @@
-$base-color-darker: #68CBB3;
+$base-color: #68CBB3;
 $base-color-lighter: #95D1C5;
-
+$base-color-darker: #57B9A1;  
+$color-dark: #383838;
+$color-white: #ffffff;
