--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,9 @@
-// html {
-//   box-sizing: border-box;
-// }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 
-// *, *::after, *::before {
-//   box-sizing: border-box;
-// } 
+  li {
+    cursor: pointer;
+  }
+}
