--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -8,31 +8,35 @@
   border: none;
   outline: none;
   border-radius: 6px;
-
-  padding-left: 2.2%;
-  padding-right: 2.2%;
-
-  // font-family: PF Highway Sans Pro;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
   line-height: 14px;
   letter-spacing: 0.05em;
   text-align: left;
+  transition: all 0.25s;
 }
 
 .transparent-btn {
   background-color: transparent;
-  border: 1px solid $base-color-darker;
+  border: 1px solid $base-color;
   padding-top: 12px;
   padding-bottom: 12px;
+
+  &:hover {
+    color: $base-color;
+  }
 }
 
 .colored-btn {
-  background-color: $base-color-darker;
-  color: #fff;
+  background-color: $base-color;
+  color: $color-white;
   padding-top: 13px;
   padding-bottom: 13px;
+
+  &:hover {
+    background-color: $base-color-darker;
+  }
 }
 
-// @media (max-width: )
+
