--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,13 +1,25 @@
+@import "../abstracts/variables";
+
 .header {
-  position: relative;
-  max-width: 1140px;
-  padding: 20px;
-  margin: 0 auto;
-  outline: 1px dotted darkslategrey;
-  transition: 0.25s;
+  display: flex; 
+  justify-content: center;
+  box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
 }
 
-.header-content-wrap {
+.header-container {
+  position: relative;
+  width: 1140px;
+  padding: 20px;
+  margin: 0 auto;
+  
+  button {
+    padding-left: 2.2%;
+    padding-right: 2.2%;
+  }
+}
+
+.header-row {
   display: flex;
   align-items: center; 
 }
@@ -22,61 +34,45 @@
   }
 }
 
+.mobile-auth,
+.burger,
+.mobile-media,
+.mobile-buttons-wrap {
+  display: none;
+}
+
 .auth {
   font-size: 12px;
   text-transform: uppercase;
   position: absolute;
   right: 20px;
 }
-.auth-mobile,
-.burger {
-  display: none;
-}
-.auth-mobile {
+
+.mobile-auth {
   cursor: pointer;
   position: relative;
   overflow: hidden;
   width: 16px;
   height: 17px;
 
-  &::before {
-    content: '';
-    position: absolute;
-    display: block;
-    border-radius: 50%;
-    border: 1px solid #68CBB3;
-    width: 14px;
-    height: 14px;
-    top: 9px
-  }
-
+  &::before,
   &::after {
     content: '';
     position: absolute;
     display: block;
     border-radius: 50%;
-    border: 1px solid #68CBB3;
+    border: 1px solid $base-color;
+  }
+  &::before {
+    width: 14px;
+    height: 14px;
+    top: 9px
+  }
+  &::after {
     width: 6px;
     height: 6px;
     left: 4px;
   }
-}
-
-.burger.active::after,
-.burger.active::before,
-.burger.active span {
-  background-color: #fff;
-}
-.burger.active::after {
-  transform: rotate(-45deg);
-  bottom: 8px;
-}
-.burger.active::before {
-  transform: rotate(45deg);
-  top: 9px;
-}
-.burger.active span {
-  transform: scale(0);
 }
 
 .navigation {
@@ -85,8 +81,6 @@
 
   ul {
     display: flex;
-    list-style-type: none;
-    padding: 0;
     margin: 40px 0 0 0;
   }
   
@@ -104,29 +98,12 @@
 }
 
 @media (max-width: 710px) {
-  .header.active {
-    background-color: #383838;
-    color: #fff;
-  }
-
-  .header-content-wrap {
+  .header-row {
     justify-content: space-between;
   }
 
   .navigation {
     display: none;
-  }
-  .navigation.active {
-    display: block;
-    
-    ul {  
-      flex-direction: column;
-      margin: 37px 0 30px 0;
-
-      li {
-        margin-bottom: 20px;
-      }
-    }
   }
 
   .header {
@@ -136,13 +113,13 @@
     }
 
     .logo-link {
-      height: 31px;
+      height: 32px;
       width: 112px;
       margin: 0;
     }
   }
 
-  .auth-mobile,
+  .mobile-auth,
   .burger {
     display: block;
   }
@@ -153,13 +130,14 @@
     width: 24px;
     height: 18px;
   }
+
   .burger span,
   .burger::after,
   .burger::before {
     content: '';
-    transition: 0.25s;
+    transition: 0.35s;
     position: absolute;
-    background-color: #383838;
+    background-color: $color-dark;
     width: 100%;
     height: 1px;
   }
@@ -171,5 +149,12 @@
   }
   .burger::before {
     top: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .header-container {
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
 }
