--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -28,6 +28,7 @@ section {
   outline: none;
   font-size: 14px;
   position: relative;
+  width: 278px;
 
   &::placeholder {
     position: absolute;
@@ -39,6 +40,7 @@ section {
 
 .input-wrap {
   position: relative;
+  margin-right: 10px;
 
   &::after {
     content: url('../../assets/images/search.svg');
