--- a/css/main.css
+++ b/css/main.css
@@ -453,6 +453,21 @@ input[type=range]::-webkit-slider-thumb {
   background-color: red;
 }
 
+#left-thumb-age,
+#right-thumb-age {
+  white-space: nowrap;
+  font-size: 12px;
+  color: #68CBB3;
+  position: absolute;
+  width: 38px;
+  background-color: #ffffff;
+  top: -40px;
+  left: -20px;
+  padding: 8px 6px;
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
+}
+
 ul {
   margin: 0;
   padding: 0;
