--- a/scss/components/_range-slider.scss
+++ b/scss/components/_range-slider.scss
@@ -71,10 +71,17 @@ input[type=range]::-webkit-slider-thumb {
 	background-color: red;
 }
 
-// #input-left {
-//   top: 19px;
-// }
-
-// #input-right {
-//   top: -19px;
-// }
+#left-thumb-age,
+#right-thumb-age {
+  white-space: nowrap;
+  font-size: 12px;
+  color: $base-color;
+  position: absolute;
+  width: 38px;
+  background-color: $color-white;
+  top: -40px;
+  left: -20px;
+  padding: 8px 6px;
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
+}
