--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,4 +1,5 @@
 @import "../abstracts/variables";
+@import "../abstracts/mixins";
 
 .dropdown-styles {
   user-select: none;
@@ -35,7 +36,7 @@
 .dropping-block {
   position: absolute;
   z-index: 9;
-  border: 1px solid #E0E0E0;
+  @include light-border;
   border-top: none;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -45,7 +46,7 @@
 }
 
 .selected {
-  border: 1px solid #E0E0E0;
+  @include light-border;
   border-radius: 5px;
   position: relative;
   cursor: pointer;
