--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import "./layout/header";
 @import "./layout/header-active";
 @import "./layout/main";
+@import "./layout/main-filters";
 
 @import "./components/buttons";
 @import "./components/dropdown";
