--- a/css/main.css
+++ b/css/main.css
@@ -232,10 +232,11 @@ section {
 
 .section-inner {
   position: relative;
-  width: 1140px;
+  width: 1240px;
   padding: 20px;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .banner {
@@ -244,23 +245,6 @@ section {
 
 .candidates {
   background-color: #F4FAF9;
-}
-
-.key-word-input {
-  border: 1px solid #E0E0E0;
-  border-radius: 5px;
-  padding: 10px 14px 10px 37px;
-  outline: none;
-  font-size: 14px;
-  position: relative;
-  width: 278px;
-}
-
-.key-word-input::placeholder {
-  position: absolute;
-  left: 37px;
-  color: #BDBDBD;
-  font-weight: 300;
 }
 
 .input-wrap {
@@ -273,6 +257,112 @@ section {
   position: absolute;
   left: 11px;
   top: 12px;
+}
+
+.key-word-input {
+  border: 1px solid #E0E0E0;
+  border-radius: 5px;
+  padding: 11px 0 11px 35px;
+  outline: none;
+  font-size: 14px;
+  position: relative;
+  width: 278px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.key-word-input::placeholder {
+  position: absolute;
+  left: 37px;
+  color: #BDBDBD;
+  font-weight: 300;
+}
+
+.extra-filters {
+  white-space: nowrap;
+  width: 182px;
+  padding-left: 18%;
+  padding-right: 32px;
+  position: relative;
+  margin-right: 10px;
+}
+
+.extra-filters::before {
+  content: url("../../assets/images/filters.svg");
+  position: absolute;
+  left: 28px;
+  top: 11px;
+  width: 14px;
+  height: 14px;
+}
+
+.search {
+  padding-left: 27px;
+  padding-right: 27px;
+}
+
+.filter-buttons-wrap {
+  display: flex;
+  align-items: baseline;
+}
+
+@media (max-width: 1244px) {
+  .filter-buttons-wrap .search {
+    width: 184px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 940px) {
+  .input-wrap {
+    margin-right: 0;
+    width: 44%;
+  }
+  .key-word-input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 766px) {
+  .input-wrap {
+    margin-right: 0;
+    width: calc(100% - 37px);
+  }
+  .key-word-input {
+    width: 100%;
+  }
+  .filter-buttons-wrap .extra-filters {
+    padding-left: 32px;
+    width: 49%;
+  }
+  .filter-buttons-wrap .search {
+    width: 49%;
+  }
+  .filter-buttons-wrap {
+    width: 100%;
+    justify-content: space-between;
+  }
+  [data-type=casting] {
+    order: 0;
+  }
+  [data-type=gender] {
+    order: 1;
+  }
+  [data-type=key-word] {
+    order: 3;
+  }
+  [data-type=range-slider] {
+    order: 2;
+  }
+  [data-type=filter-buttons] {
+    order: 4;
+  }
+}
+
+@media (max-width: 420px) {
+  .extra-filters::before {
+    left: 10px;
+  }
 }
 
 .colored-btn,
@@ -313,9 +403,18 @@ section {
   background-color: #57B9A1;
 }
 
+@media (max-width: 766px) {
+  .colored-btn,
+  .transparent-btn {
+    text-align: center;
+  }
+}
+
 .dropdown-styles {
+  position: relative;
   user-select: none;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .dropdown-styles.active-dropdown .dropping-block {
@@ -371,7 +470,7 @@ section {
 
 .selected,
 .option {
-  padding: 10px 15px;
+  padding: 11px 15px;
 }
 
 .option {
@@ -380,6 +479,14 @@ section {
 
 .option:hover {
   color: #68CBB3;
+}
+
+@media (max-width: 766px) {
+  .dropdown-styles,
+  .dropping-block {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 .range-slider-wrap {
