--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -7,10 +7,11 @@ section {
 
 .section-inner {
   position: relative;
-  width: 1140px;
+  width: 1240px;
   padding: 20px;
   margin: 0 auto;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .banner {
@@ -21,31 +22,4 @@ section {
   background-color: $base-color-ultralite;
 }
 
-.key-word-input {
-  border: 1px solid #E0E0E0;
-  border-radius: 5px;
-  padding: 10px 14px 10px 37px;
-  outline: none;
-  font-size: 14px;
-  position: relative;
-  width: 278px;
 
-  &::placeholder {
-    position: absolute;
-    left: 37px;
-    color: #BDBDBD;
-    font-weight: 300;
-  }
-}
-
-.input-wrap {
-  position: relative;
-  margin-right: 10px;
-
-  &::after {
-    content: url('../../assets/images/search.svg');
-    position: absolute;
-    left: 11px;
-    top: 12px;
-  }
-}
