--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@
   }
 }
 
-@media (max-width: 710px) {
+@media (max-width: 766px) {
   .header-row {
     justify-content: space-between;
   }
@@ -233,18 +233,119 @@ section {
 .section-inner {
   position: relative;
   width: 1240px;
-  padding: 20px;
+  padding: 0 20px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+}
+
+.candidates {
+  background-color: #F4FAF9;
 }
 
 .banner {
   background-color: #95D1C5;
 }
 
-.candidates {
-  background-color: #F4FAF9;
+.banner-wrap {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.image-container {
+  max-height: 400px;
+  max-width: 480px;
+  overflow: hidden;
+  width: 50%;
+}
+
+.image-container img {
+  width: 100%;
+}
+
+.artcasting {
+  width: 50%;
+  color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  justify-content: center;
+}
+
+.artcasting h2 {
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 48px;
+}
+
+.artcasting p {
+  font-size: 20px;
+  margin: 20px 0 30px 0;
+}
+
+.artcasting button {
+  color: #68CBB3;
+  background-color: #ffffff;
+  padding: 14px 28px;
+  width: 168px;
+  text-align: center;
+  font-size: 14px;
+  white-space: nowrap;
+}
+
+.artcasting button:hover {
+  background-color: #F1F1F1;
+}
+
+.banner-slide-controller {
+  margin: 0 auto;
+  position: absolute;
+  width: 137px;
+  border: 1px solid red;
+}
+
+@media (max-width: 890px) {
+  .artcasting h2 {
+    font-size: 36px;
+  }
+  .artcasting p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 766px) {
+  .banner > .section-inner {
+    justify-content: center;
+  }
+  .banner-wrap {
+    flex-direction: column;
+    align-items: center;
+  }
+  .artcasting,
+  .image-container {
+    width: 100%;
+  }
+  .artcasting {
+    margin-top: 30px;
+    margin-bottom: 80px;
+  }
+  .artcasting h2 {
+    font-size: 36px;
+  }
+  .artcasting p {
+    font-size: 18px;
+  }
+  .artcasting button {
+    width: 100%;
+  }
+}
+
+.filters {
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 
 .input-wrap {
@@ -304,6 +405,7 @@ section {
 .filter-buttons-wrap {
   display: flex;
   align-items: baseline;
+  margin-bottom: 10px;
 }
 
 @media (max-width: 1244px) {
@@ -324,6 +426,9 @@ section {
 }
 
 @media (max-width: 766px) {
+  .filters {
+    padding-bottom: 20px;
+  }
   .input-wrap {
     margin-right: 0;
     width: calc(100% - 37px);
