refactor: minor code refactor

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./layout/header-active";
 @import "./layout/main";
 @import "./layout/main-filters";
+@import "./layout/main-banner";
 
 @import "./components/buttons";
 @import "./components/dropdown";
