--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@
   }
 }
 
-@media (max-width: 766px) {
+@media (max-width: 710px) {
   .header-row {
     justify-content: space-between;
   }
@@ -239,8 +239,120 @@ section {
   flex-wrap: wrap;
 }
 
+.candidate-card,
+.add-profile {
+  width: 182px;
+  height: 346px;
+}
+
+.candidates > .section-inner {
+  padding-top: 100px;
+}
+
 .candidates {
   background-color: #F4FAF9;
+}
+
+.candidates h2 {
+  color: #383838;
+  font-size: 48px;
+  font-weight: 300;
+  letter-spacing: 0;
+  margin: 0 0 40px 0;
+}
+
+.candidates-carousel {
+  display: flex;
+}
+
+.candidate-card {
+  position: relative;
+  margin-right: 10px;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+.candidate-card:hover {
+  box-shadow: 0 0 2px 1px #68CBB3;
+}
+
+.candidate-photo-wrap {
+  height: 238px;
+}
+
+.candidate-photo-wrap img {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.summary {
+  box-sizing: border-box;
+  height: 108px;
+  padding: 8px;
+  border: 1px solid #E0E0E0;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top: none;
+  background-color: #ffffff;
+}
+
+.summary p {
+  margin: 0 0 5px 0;
+  color: #383838;
+}
+
+.summary p:last-child {
+  margin-bottom: 0;
+}
+
+.name {
+  height: 40px;
+}
+
+.role {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.add-profile {
+  border-radius: 5px;
+  background-color: #7C4D82;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  position: absolute;
+  right: 20px;
+}
+
+.add-profile::before {
+  content: url("../../assets/images/plus-icon.svg");
+  cursor: pointer;
+  display: block;
+  margin-bottom: 8px;
+}
+
+@media (max-width: 890px) {
+  .candidates > .section-inner {
+    padding-top: 50px;
+  }
+  .candidates h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 710px) {
+  .candidates h2 {
+    font-size: 30px;
+    margin-bottom: 13px;
+  }
 }
 
 .filters {
@@ -443,7 +555,7 @@ section {
   }
 }
 
-@media (max-width: 766px) {
+@media (max-width: 710px) {
   .banner > .section-inner {
     justify-content: center;
   }
