--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,4 +1,5 @@
 @import "../abstracts/variables";
+@import "../abstracts/mixins";
 
 section {
   display: flex;
@@ -16,6 +17,11 @@ section {
 
 
 
+.candidate-card,
+.add-profile {
+  width: 182px;
+  height: 346px;
+}
 
 .candidates > .section-inner {
   padding-top: 100px;
@@ -30,6 +36,85 @@ section {
     font-weight: 300;
     letter-spacing: 0;
     margin: 0 0 40px 0;
+  }
+}
+
+.candidates-carousel {
+  display: flex;
+}
+
+.candidate-card {
+  position: relative;
+  margin-right: 10px;
+  border-radius: 5px;
+  transition: 0.2s;
+
+  &:hover {
+    box-shadow: 0 0 2px 1px $base-color;
+  }
+}
+
+.candidate-photo-wrap {
+  height: 238px;
+
+  img {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px; 
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.summary {
+  box-sizing: border-box;
+  height: 108px;
+  padding: 8px;
+  @include light-border;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px; 
+  border-top: none;
+  background-color: $color-white;
+
+  p {
+    margin: 0 0 5px 0;
+    color: $color-dark;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.name {
+  height: 40px;
+}
+.role {
+  font-size: 14px;
+  font-weight: 300;
+}
+.age {
+  
+}
+
+.add-profile {
+  border-radius: 5px;
+  background-color: #7C4D82;
+  color: $color-white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  position: absolute;
+  right: 20px;
+
+  &::before {
+    content: url('../../assets/images/plus-icon.svg');
+    cursor: pointer;
+    display: block;
+    margin-bottom: 8px;
   }
 }
 
