--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 @import "./components/buttons";
 @import "./components/dropdown";
 @import "./components/range-slider";
+@import "./components/carousel";
 
 @import "./base/base";
 @import "./vendors/normalize";
