--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 .header-container {
   position: relative;
-  width: 1140px;
+  width: 1240px;
   padding: 20px;
   margin: 0 auto;
 }
@@ -239,6 +239,11 @@ section {
   flex-wrap: wrap;
 }
 
+.candidates-wrap {
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+
 .candidate-card,
 .add-profile {
   width: 182px;
@@ -247,6 +252,7 @@ section {
 
 .candidates > .section-inner {
   padding-top: 100px;
+  display: block;
 }
 
 .candidates {
@@ -261,13 +267,8 @@ section {
   margin: 0 0 40px 0;
 }
 
-.candidates-carousel {
-  display: flex;
-}
-
 .candidate-card {
   position: relative;
-  margin-right: 10px;
   border-radius: 5px;
   transition: 0.2s;
 }
@@ -302,6 +303,7 @@ section {
 .summary p {
   margin: 0 0 5px 0;
   color: #383838;
+  letter-spacing: 0;
 }
 
 .summary p:last-child {
@@ -315,6 +317,11 @@ section {
 .role {
   font-size: 14px;
   font-weight: 300;
+  height: 24px;
+}
+
+.age {
+  font-size: 14px;
 }
 
 .add-profile {
@@ -322,13 +329,16 @@ section {
   background-color: #7C4D82;
   color: #ffffff;
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
   font-size: 14px;
   position: absolute;
-  right: 20px;
+  right: 5px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .add-profile::before {
@@ -346,12 +356,45 @@ section {
     font-size: 36px;
     margin-bottom: 20px;
   }
+  .candidate-card,
+  .add-profile {
+    width: 172px;
+    height: 336px;
+  }
 }
 
 @media (max-width: 710px) {
   .candidates h2 {
     font-size: 30px;
     margin-bottom: 13px;
+  }
+}
+
+@media (max-width: 480px) {
+  .candidate-card,
+  .add-profile {
+    width: 130px;
+    height: 286px;
+  }
+  .candidate-photo-wrap {
+    height: 150px;
+  }
+  .summary {
+    height: 136px;
+  }
+  .name,
+  .age {
+    font-size: 14px;
+  }
+  .name {
+    height: 55px;
+  }
+  .role {
+    height: 37px;
+    font-size: 12px;
+  }
+  .age {
+    height: 18px;
   }
 }
 
@@ -379,7 +422,7 @@ section {
   outline: none;
   font-size: 14px;
   position: relative;
-  width: 278px;
+  width: 243px;
   margin-bottom: 10px;
   display: block;
 }
@@ -790,6 +833,69 @@ input[type=range]::-webkit-slider-thumb {
   padding: 8px 6px;
   border: 1px solid #E0E0E0;
   border-radius: 5px;
+}
+
+.carousel-list {
+  width: 9999px;
+  padding: 5px;
+  padding-right: 0;
+  list-style: none;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+}
+
+.candidate-card {
+  margin-right: 10px;
+}
+
+.candidates-carousel {
+  position: relative;
+  margin: 0 auto;
+}
+
+.strip {
+  overflow: hidden;
+}
+
+.arrow {
+  position: absolute;
+  top: calc(50% - 30px);
+  z-index: 10;
+  box-shadow: 0 6px 15px 2px rgba(99, 99, 99, 0.4);
+  outline: none;
+  border: 0;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+
+.arrow:hover {
+  transform: scale(1.08);
+  box-shadow: 0 6px 20px 2px rgba(99, 99, 99, 0.4);
+}
+
+.arrow.prev {
+  left: -15px;
+}
+
+.arrow.prev::after {
+  content: url("../../assets/images/arrow-prev.svg");
+}
+
+.arrow.next {
+  right: -15px;
+}
+
+.arrow.next::after {
+  content: url("../../assets/images/arrow-next.svg");
+}
+
+@media (max-width: 340px) {
+  .arrow {
+    top: calc(50% - 40px);
+  }
 }
 
 ul {
