--- a/scss/layout/_main-filters.scss
+++ b/scss/layout/_main-filters.scss
@@ -23,7 +23,7 @@
   outline: none;
   font-size: 14px;
   position: relative;
-  width: 278px;
+  width: 278px - 35px;
   margin-bottom: 10px;
   display: block;
 
