--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,7 @@
   }
 }
 
+.filters,
 section {
   display: flex;
   justify-content: center;
@@ -337,6 +338,7 @@ section {
   font-size: 14px;
   position: absolute;
   right: 5px;
+  top: 5px;
   padding: 10px;
   box-sizing: border-box;
 }
