--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,6 +1,7 @@
 @import "../abstracts/variables";
 @import "../abstracts/mixins";
 
+.filters,
 section {
   display: flex;
   justify-content: center;
@@ -111,6 +112,7 @@ section {
   font-size: 14px;
   position: absolute;
   right: 5px;
+  top: 5px;
   padding: 10px;
   box-sizing: border-box;
 
