--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -42,14 +42,14 @@
   left: -15px;
 
   &::after {
-    content: url('../../assets/images/arrow-prev.svg');
+    content: url('https://nagievr.github.io/assets/images/arrow-prev.svg');
   }
 }
 .arrow.next{
   right: -15px;
 
   &::after {
-    content: url('../../assets/images/arrow-next.svg');
+    content: url('https://nagievr.github.io/assets/images/arrow-next.svg');
   }
 }
 
