--- a/scss/layout/_main-filters.scss
+++ b/scss/layout/_main-filters.scss
@@ -10,7 +10,7 @@
   margin-right: 10px;
 
   &::after {
-    content: url('../../assets/images/search.svg');
+    content: url('https://nagievr.github.io/assets/images/search.svg');
     position: absolute;
     left: 11px;
     top: 12px;
@@ -44,7 +44,7 @@
   margin-right: 10px;
 
   &::before {
-    content: url('../../assets/images/filters.svg');
+    content: url('https://nagievr.github.io/assets/images/filters.svg');
     position: absolute;
     left: 28px;
     top: 11px;
