--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -54,7 +54,7 @@
   cursor: pointer;
 
   &::after {
-    content: url('../../assets/images/down-arrow.svg');
+    content: url('https://nagievr.github.io/assets/images/down-arrow.svg');
     position: absolute;
     right: 15px;
     transition: 0.15s;
