--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./layout/main";
 @import "./layout/main-filters";
 @import "./layout/main-banner";
+@import "./layout/main-candidates";
 
 @import "./components/buttons";
 @import "./components/dropdown";
