--- a/scss/layout/_main-candidates.scss
+++ b/scss/layout/_main-candidates.scss
@@ -102,7 +102,7 @@
   box-sizing: border-box;
 
   &::before {
-    content: url('https://nagievr.github.io/assets/images/plus-icon.svg');
+    content: url('https://raw.githubusercontent.com/NagievR/artcasting-test-task/8c752e305d3c94a6c30b713b3e90ed4e7cae708d/assets/images/plus-icon.svg');
     cursor: pointer;
     display: block;
     margin-bottom: 8px;
