--- a/scss/layout/_main-filters.scss
+++ b/scss/layout/_main-filters.scss
@@ -10,7 +10,7 @@
   margin-right: 10px;
 
   &::after {
-    content: url('https://nagievr.github.io/assets/images/search.svg');
+    content: url('https://raw.githubusercontent.com/NagievR/artcasting-test-task/8c752e305d3c94a6c30b713b3e90ed4e7cae708d/assets/images/search.svg');
     position: absolute;
     left: 11px;
     top: 12px;
