--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -42,14 +42,14 @@
   left: -15px;
 
   &::after {
-    content: url('https://nagievr.github.io/assets/images/arrow-prev.svg');
+    content: url('https://raw.githubusercontent.com/NagievR/artcasting-test-task/8c752e305d3c94a6c30b713b3e90ed4e7cae708d/assets/images/arrow-prev.svg');
   }
 }
 .arrow.next{
   right: -15px;
 
   &::after {
-    content: url('https://nagievr.github.io/assets/images/arrow-next.svg');
+    content: url('https://raw.githubusercontent.com/NagievR/artcasting-test-task/8c752e305d3c94a6c30b713b3e90ed4e7cae708d/assets/images/arrow-next.svg');
   }
 }
 
