--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -54,7 +54,7 @@
   cursor: pointer;
 
   &::after {
-    content: url('https://nagievr.github.io/assets/images/down-arrow.svg');
+    content: url('https://raw.githubusercontent.com/NagievR/artcasting-test-task/8c752e305d3c94a6c30b713b3e90ed4e7cae708d/assets/images/down-arrow.svg');
     position: absolute;
     right: 15px;
     transition: 0.15s;
